--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -10,7 +10,7 @@ obj-y     = fork.o exec_domain.o panic.o printk.o \
 	    kthread.o sys_ni.o  \
 	    nsproxy.o \
 	    notifier.o ksysfs.o cred.o \
-	    async.o range.o groups.o smpboot.o
+	    async.o range.o groups.o smpboot.o printk_interface.o
 
 ifdef CONFIG_FUNCTION_TRACER
 # Do not trace debug files and internal ftrace files
