--- a/arch/arm64/configs/guyver_defconfig
+++ b/arch/arm64/configs/guyver_defconfig
@@ -78,6 +78,7 @@ CONFIG_ZEN_INTERACTIVE=y
 CONFIG_STATE_NOTIFIER=y
 CONFIG_LAZYPLUG=y
 CONFIG_INTELLI_HOTPLUG=y
+CONFIG_FORCE_FAST_CHARGE=y
 
 #
 # IRQ subsystem
