--- a/drivers/input/Kconfig
+++ b/drivers/input/Kconfig
@@ -200,6 +200,15 @@ config SENSORS_HALL
 	 Say y here if you want to use this hall sensor driver, it
 	 is like a switch. For example, lid.
 
+config FINGERPRINT_FPC1020_TA
+	tristate "Fingerprint FPC"
+	help
+	  Say Y here to enable support for retrieving self-test reports.
+
+	  If unsure, say N.
+
+	  To compile this driver as a module, choose M here.
+
 comment "Input Device Drivers"
 
 source "drivers/input/keyboard/Kconfig"
@@ -214,6 +223,8 @@ source "drivers/input/touchscreen/Kconfig"
 
 source "drivers/input/misc/Kconfig"
 source "drivers/input/misc/goodix/Kconfig"
+
+source "drivers/input/fingerprint/Kconfig"
 
 endif
 
