--- a/arch/arm/boot/dts/qcom/msm8976-gpu.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8976-gpu.dtsi
@@ -119,6 +119,9 @@
 		coresight-child-list = <&funnel_in0>;
 		coresight-child-ports = <4>;
 
+		/* Enable POPP */
+		qcom,popp-enable;
+
 		/* Power levels */
 		qcom,gpu-pwrlevels {
 			#address-cells = <1>;
