DTS: Update Regulator Tables

--- a/arch/arm/boot/dts/qcom/msm8976-regulator.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8976-regulator.dtsi
@@ -455,17 +455,6 @@
 		qcom,cpr-speed-bin-max-corners =
 				<0 0 2 4 8>,
 				<1 0 2 4 9>;
-		qcom,cpr-fuse-version-map =
-		/* <Speed_bits PVS_version CPR_Rev - - -> */
-			<  0  (-1)   1  (-1) (-1) (-1)>,
-			<  0  (-1)   2  (-1) (-1) (-1)>,
-			<  0  (-1)   3  (-1) (-1) (-1)>,
-			<(-1) (-1) (-1) (-1) (-1) (-1)>;
-		qcom,cpr-quotient-adjustment =
-			<0 37 150>, /* NOM + 15mv, TURBO + 60mv */
-			<0 37 150>, /* NOM + 15mv, TURBO + 60mv */
-			<0 37 150>, /* NOM + 15mv, TURBO + 60mv */
-			<0  0   0>;
 		qcom,cpr-voltage-floor-override =
 			<(-1) (-1) 795000 795000 835000 855000
 			945000 945000 990000 990000 990000>;
@@ -550,17 +539,6 @@
 		qcom,cpr-speed-bin-max-corners =
 				<0 0 2 4 6>,
 				<1 0 2 4 7>;
-		qcom,cpr-fuse-version-map =
-		/* <Speed_bits PVS_version CPR_Rev - - -> */
-			<  0  (-1)   1  (-1) (-1) (-1)>,
-			<  0  (-1)   2  (-1) (-1) (-1)>,
-			<  0  (-1)   3  (-1) (-1) (-1)>,
-			<(-1) (-1) (-1) (-1) (-1) (-1)>;
-		qcom,cpr-quotient-adjustment =
-			<0 (-37) 0>, /* NOM - 15mv */
-			<0 (-37) 0>, /* NOM - 15mv */
-			<0 (-37) 0>, /* NOM - 15mv */
-			<0    0  0>;
 		qcom,cpr-voltage-floor-override =
 			<(-1) (-1) 790000 790000 820000 850000
 			940000 990000 990000>;
@@ -647,18 +625,32 @@
 		qcom,cpr-init-voltage-step = <12500>;
 		qcom,cpr-ro-count = <8>;
 		qcom,cpr-init-voltage-as-ceiling;
+		qcom,foundry-id-fuse = <37 40 3>;
+		qcom,cpr-fuse-version-map =
+			<0 (-1) (-1)>,
+			<4 (-1) (-1)>;
 		qcom,cpr-init-voltage-adjustment =
-			<(-55000) 0 (-60000) 0 (60000) 0 (60000) 0 (50000)>;
+			<0 0 (-35000) 0 (60000) 0 (60000) 0 (50000)>,
+			<0 0 (-35000) 0 (60000) 0 (60000) 0 (50000)>;
 		qcom,cpr-target-quotients =
-			<513  489  620  574  237 272 144 177>,
-			<575  547  688  638  272 312 169 206>,
-			<706  672  819  765  363 410 241 287>,
-			<768  741  890  843  404 450 277 323>,
-			<917  880  1039 982  514 562 369 421>,
-			<998  960  1126 1069 571 617 422 472>,
+			<376  368  483  453  149 173 78  100>,
+			<562  536  675  627  264 303 163 199>,
+			<631  606  744  699  315 356 205 245>,
+			<780  752  902  854  412 459 283 330>,
+			<892  858  1014 960  498 544 357 407>,
+			<1010 971  1138 1080 579 626 428 479>,
 			<1074 1028 1198 1135 635 675 483 531>,
+			<1213 1157 1342 1268 736 771 574 619>,
+			<1326 1256 1455 1367 808 852 628 682>,
+			<413  401  520  486  173 200  96 121>,
+			<575  547  688  638  272 312 169 206>,
+			<644  617  757  710  323 365 211 252>,
+			<755  730  877  832  396 441 271 316>,
+			<829  803  951  905  458 499 327 372>,
+			<960  927  1088 1036 547 590 404 451>,
+			<1011 973  1135 1080 595 630 453 496>,
 			<1188 1135 1317 1246 720 753 562 605>,
-			<1276 1212 1405 1323 776 816 604 654>;
+			<1301 1234 1430 1345 792 834 616 668>;
 		qcom,cpr-enable;
 	};
 };
