--- a/drivers/video/msm/mdss/Kconfig
+++ b/drivers/video/msm/mdss/Kconfig
@@ -70,3 +70,9 @@ config FB_MSM_MDSS_KCAL_CTRL
 	---help---
 	  Enable sysfs for rgb/lut control for mdss-mdp display controllers
 	  in the MDSS sub-system.
+
+config STATE_NOTIFIER
+	bool "State Notifier driver"
+	default y
+	---help---
+Monitor and notify device suspend states
