--- a/arch/arm/boot/dts/qcom/msm8976-regulator.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8976-regulator.dtsi
@@ -383,8 +383,8 @@
 		regulator-max-microvolt = <9>;
 
 		qcom,cpr-fuse-corners = <3>;
-		qcom,cpr-voltage-ceiling = <950000 1050000 1165000>;
-		qcom,cpr-voltage-floor =   <795000  835000  930000>;
+		qcom,cpr-voltage-ceiling = <865000 965000 1080000>;
+		qcom,cpr-voltage-floor =   <710000  755000  845000>;
 		vdd-apc-supply = <&pm8950_s5>;
 
 		vdd-mx-supply = <&pm8950_s6_level_ao>;
@@ -434,7 +434,7 @@
 		qcom,cpr-fuse-revision = <59 53 3 0>;
 		qcom,speed-bin-fuse-sel = <37 34 3 0>;
 
-		qcom,cpr-init-voltage-ref = <950000 1050000 1165000>;
+		qcom,cpr-init-voltage-ref = <865000 965000 1080000>;
 		qcom,cpr-init-voltage-step = <10000>;
 
 		qcom,cpr-corner-map = <1 1 2 2 3 3 3 3 3>;
@@ -456,8 +456,8 @@
 				<0 0 2 4 8>,
 				<1 0 2 4 9>;
 		qcom,cpr-voltage-floor-override =
-			<(-1) (-1) 795000 795000 835000 855000
-			945000 945000 990000 990000 990000>;
+			<(-1) (-1) 710000 710000 750000 770000
+			860000 860000 905000 905000 905000>;
 		qcom,cpr-enable;
 	};
 
@@ -471,8 +471,8 @@
 		regulator-max-microvolt = <7>;
 
 		qcom,cpr-fuse-corners = <3>;
-		qcom,cpr-voltage-ceiling = <950000 1050000 1165000>;
-		qcom,cpr-voltage-floor =   <790000  820000  915000>;
+		qcom,cpr-voltage-ceiling = <865000 965000 1080000>;
+		qcom,cpr-voltage-floor =   <705000  735000  839000>;
 		vdd-apc-supply = <&pm8004_s2>;
 
 		vdd-mx-supply = <&pm8950_s6_level_ao>;
@@ -521,7 +521,7 @@
 		qcom,cpr-fuse-revision = <59 53 3 0>;
 		qcom,speed-bin-fuse-sel = <37 34 3 0>;
 
-		qcom,cpr-init-voltage-ref = <950000 1050000 1165000>;
+		qcom,cpr-init-voltage-ref = <865000 965000 1080000>;
 		qcom,cpr-init-voltage-step = <10000>;
 
 		qcom,cpr-corner-map = <1 1 2 2 3 3 3>;
@@ -540,8 +540,8 @@
 				<0 0 2 4 6>,
 				<1 0 2 4 7>;
 		qcom,cpr-voltage-floor-override =
-			<(-1) (-1) 790000 790000 820000 850000
-			940000 990000 990000>;
+			<(-1) (-1) 705000 705000 735000 765000
+			855000 905000 905000>;
 		qcom,cpr-enable;
 	};
 
