--- a/arch/arm64/Makefile
+++ b/arch/arm64/Makefile
@@ -17,8 +17,19 @@ GZFLAGS		:=-9
 
 KBUILD_DEFCONFIG := defconfig
 
+ARM_ARCH_OPT := -mcpu=cortex-a72.cortex-a53+crypto -mtune=cortex-a72.cortex-a53
+GEN_OPT_FLAGS := $(call cc-option,$(ARM_ARCH_OPT),-march=armv8-a+crc+crypto) \
+-g0 \
+-DNDEBUG \
+-fomit-frame-pointer \
+-fmodulo-sched \
+-fmodulo-sched-allow-regmoves \
+-fivopts
+
+
 KBUILD_CFLAGS	+= -mgeneral-regs-only
 KBUILD_CFLAGS	+= -fno-pic
+KBUILD_CFLAGS	+= $(GEN_OPT_FLAGS)
 KBUILD_CFLAGS	+= -fno-asynchronous-unwind-tables
 ifeq ($(CONFIG_CPU_BIG_ENDIAN), y)
 KBUILD_CPPFLAGS	+= -mbig-endian
