--- a/arch/arm64/configs/guyver_defconfig
+++ b/arch/arm64/configs/guyver_defconfig
@@ -77,6 +77,7 @@ CONFIG_QUICK_WAKEUP=y
 CONFIG_ZEN_INTERACTIVE=y
 CONFIG_STATE_NOTIFIER=y
 CONFIG_LAZYPLUG=y
+CONFIG_INTELLI_HOTPLUG=y
 
 #
 # IRQ subsystem
