--- a/arch/arm64/configs/guyver_defconfig
+++ b/arch/arm64/configs/guyver_defconfig
@@ -43,7 +43,7 @@ CONFIG_BUILDTIME_EXTABLE_SORT=y
 #
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
-CONFIG_LOCALVERSION="-Guyver-v2.X"
+CONFIG_LOCALVERSION="-Guyver-v2.2"
 CONFIG_LOCALVERSION_AUTO=y
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZ4=y
@@ -1740,8 +1740,9 @@ CONFIG_UNIX98_PTYS=y
 # CONFIG_SERIAL_MAX310X is not set
 # CONFIG_SERIAL_MFD_HSU is not set
 # CONFIG_SERIAL_JSM is not set
-# CONFIG_SERIAL_MSM_HS is not set
-# CONFIG_SERIAL_MSM_HSL is not set
+CONFIG_SERIAL_MSM_HS=y
+CONFIG_SERIAL_MSM_HSL=y
+CONFIG_SERIAL_MSM_HSL_CONSOLE=y
 # CONFIG_SERIAL_SCCNXP is not set
 # CONFIG_SERIAL_TIMBERDALE is not set
 # CONFIG_SERIAL_ALTERA_JTAGUART is not set
