--- a/sound/soc/msm/Kconfig
+++ b/sound/soc/msm/Kconfig
@@ -247,6 +247,13 @@ config SND_SOC_APQ8084
 	 the machine drivers and the corresponding
 	 DAI-links.
 
+config SPEAKER_EXT_PA
+	default n
+	bool "Speaker external PA"
+	help
+	  Support for external PA.
+
+
 config SND_SOC_MSM8X16
 	tristate "SoC Machine driver for MSM8X16 boards"
 	depends on ARCH_MSM8916
@@ -267,6 +274,7 @@ config SND_SOC_MSM8X16
 	select SND_SOC_CPE
 	select SND_HWDEP
         select DTS_EAGLE
+	select SPEAKER_EXT_PA
 	help
 	 To add support for SoC audio on MSM8X16.
 	 This will enable sound soc drivers which
@@ -324,6 +332,7 @@ config SND_SOC_MSM8994
 	select QTI_PP
 	select DTS_SRS_TM
 	select SND_SOC_CPE
+	select MSM_ULTRASOUND
 	select DOLBY_DS2
 	select SND_HWDEP
         select DTS_EAGLE
