Add Qnovo Interface@balika011

--- a/arch/arm64/configs/guyver_defconfig
+++ b/arch/arm64/configs/guyver_defconfig
@@ -4155,6 +4155,7 @@ CONFIG_CRYPTO_LZ4HC=y
 CONFIG_CRYPTO_HW=y
 CONFIG_CRYPTO_DEV_QCE50=y
 CONFIG_FIPS_ENABLE=y
+CONFIG_QNS_SYSTEM=y
 CONFIG_FIPS_RECOMPILE=y
 CONFIG_CRYPTO_DEV_QCRYPTO=y
 CONFIG_CRYPTO_DEV_QCE=y
