--- a/arch/arm/boot/dts/qcom/msm-pmi8950.dtsi
+++ b/arch/arm/boot/dts/qcom/msm-pmi8950.dtsi
@@ -325,10 +325,11 @@
 			qcom,capacity-learning-on;
 			qcom,fg-cutoff-voltage-mv = <3400>;
 			qcom,cold-bat-decidegc = <0>;
-			qcom,cool-bat-decidegc = <150>;
+			qcom,cool-bat-decidegc = <100>;
 			qcom,warm-bat-decidegc = <450>;
-			qcom,hot-bat-decidegc  = <600>;
-			qcom,thermal-coefficients = [C2 86 BB 50 CF 37];
+			qcom,hot-bat-decidegc = <540>;
+			qcom,cold-hot-jeita-hysteresis = <0 10>;/*60->58 recharge*/
+			qcom,thermal-coefficients = [67 85 FC 4A E0 3D];
 
 			qcom,fg-soc@4000 {
 			status = "okay";
