--- a/arch/arm/boot/dts/qcom/msm-pmi8950.dtsi
+++ b/arch/arm/boot/dts/qcom/msm-pmi8950.dtsi
@@ -207,12 +207,12 @@
 			qcom,bms-psy-name = "bms";
 			qcom,thermal-mitigation = <2400 2200 1800 1000 0>;
 			qcom,fastchg-current-comp = <900>;
+			qcom,float-voltage-comp = <11>;
 			/*11 for 4.2V, 16 for 4.1V*/
 
 			qcom,force-aicl-rerun;
 			qcom,aicl-rerun-period-s = <180>;
 			qcom,autoadjust-vfloat;
-			qcom,enable-hvdcp-9v;
 			qcom,pmic-revid = <&pmi8950_revid>;
 			qcom,charge-unknown-battery;
 			qcom,board_ntc-vadc = <&pm8950_vadc>;
