--- a/arch/arm/boot/dts/qcom/msm-pmi8950.dtsi
+++ b/arch/arm/boot/dts/qcom/msm-pmi8950.dtsi
@@ -199,20 +199,20 @@
 			#size-cells = <1>;
 
 			qcom,iterm-ma = <200>;
+			qcom,fastchg-current-ma = <2400>;
 			qcom,float-voltage-mv = <4400>;
 			qcom,resume-delta-mv = <200>;
-			qcom,fastchg-current-ma = <3000>;
 			qcom,chg-inhibit-fg;
 			qcom,rparasitic-uohm = <100000>;
 			qcom,bms-psy-name = "bms";
-			qcom,thermal-mitigation = <2400 2200 1800 1000 0>;
+			qcom,thermal-mitigation = <2400 1500 700 600 0>;
 			qcom,fastchg-current-comp = <900>;
-			qcom,float-voltage-comp = <11>;
 			/*11 for 4.2V, 16 for 4.1V*/
 
 			qcom,force-aicl-rerun;
 			qcom,aicl-rerun-period-s = <180>;
 			qcom,autoadjust-vfloat;
+			qcom,enable-hvdcp-9v;
 			qcom,pmic-revid = <&pmi8950_revid>;
 			qcom,charge-unknown-battery;
 			qcom,board_ntc-vadc = <&pm8950_vadc>;
