--- a/drivers/gpu/Makefile
+++ b/drivers/gpu/Makefile
@@ -1,4 +1,4 @@
 obj-y			+= drm/ vga/
 obj-$(CONFIG_TEGRA_HOST1X)	+= host1x/
 obj-$(CONFIG_MSM_KGSL)	+= msm/
-ccflags-y := -Ofast
+ccflags-y := -Ofast -ffast-math
