--- a/arch/arm64/configs/guyver_defconfig
+++ b/arch/arm64/configs/guyver_defconfig
@@ -1298,7 +1298,9 @@ CONFIG_DM_REQ_CRYPT=y
 # CONFIG_DM_UEVENT is not set
 # CONFIG_DM_FLAKEY is not set
 CONFIG_DM_VERITY=y
-# CONFIG_DM_VERITY_FEC is not set
+CONFIG_DM_VERITY_FEC=y
+CONFIG_DM_VERITY_HASH_PREFETCH_MIN_SIZE_128=y
+CONFIG_DM_VERITY_HASH_PREFETCH_MIN_SIZE=128
 # CONFIG_TARGET_CORE is not set
 # CONFIG_FUSION is not set
 
