--- a/arch/arm/boot/dts/qcom/msm8956-mtp.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8956-mtp.dtsi
@@ -264,6 +264,8 @@
 
 &pmi8950_charger {
 	qcom,battery-data = <&mtp_batterydata>;
+	qcom,chg-led-support;
+	qcom,chg-led-sw-controls;
 };
 
 &pm8950_cajon_dig {
