--- a/arch/arm64/configs/guyver_defconfig
+++ b/arch/arm64/configs/guyver_defconfig
@@ -3413,6 +3413,7 @@ CONFIG_ZSMALLOC=y
 CONFIG_ZRAM=y
 CONFIG_ZPOOL=y
 CONFIG_ZSWAP=y
+CONFIG_ZCACHE=y
 CONFIG_VNSWAP=y
 # CONFIG_ZRAM_DEBUG is not set
 # CONFIG_FB_SM7XX is not set
