--- a/arch/arm64/configs/guyver_defconfig
+++ b/arch/arm64/configs/guyver_defconfig
@@ -416,7 +416,6 @@ CONFIG_UKSM=y
 CONFIG_DEFAULT_MMAP_MIN_ADDR=4096
 # CONFIG_TRANSPARENT_HUGEPAGE is not set
 CONFIG_CROSS_MEMORY_ATTACH=y
-# CONFIG_CLEANCACHE is not set
 CONFIG_FRONTSWAP=y 
 # CONFIG_USE_USER_ACCESSIBLE_TIMERS is not set
 # CONFIG_ZBUD is not set
@@ -3413,6 +3412,7 @@ CONFIG_ZSMALLOC=y
 CONFIG_ZRAM=y
 CONFIG_ZPOOL=y
 CONFIG_ZSWAP=y
+CONFIG_CLEANCACHE=y
 CONFIG_ZCACHE=y
 CONFIG_VNSWAP=y
 # CONFIG_ZRAM_DEBUG is not set
