--- a/arch/arm64/configs/guyver_defconfig
+++ b/arch/arm64/configs/guyver_defconfig
@@ -3410,6 +3410,7 @@ CONFIG_ZPOOL=y
 CONFIG_ZSWAP=y
 CONFIG_CLEANCACHE=y
 CONFIG_ZCACHE=y
+CONFIG_Z3FOLD=y
 CONFIG_VNSWAP=y
 # CONFIG_ZRAM_DEBUG is not set
 # CONFIG_FB_SM7XX is not set
