--- a/drivers/soc/qcom/Kconfig
+++ b/drivers/soc/qcom/Kconfig
@@ -708,6 +708,10 @@ config INTELLI_HOTPLUG
 	help
 	  Generic Intelli-plug cpu hotplug driver for ARM SOCs
 
+config STATE_HELPER
+        bool "State Helper"
+	depends on STATE_NOTIFIER
+
 source "drivers/soc/qcom/memshare/Kconfig"
 
 endif # ARCH_MSM
