soc: qcom: add msm_hotplug
All Credits to @jollaman999

--- a/arch/arm64/configs/guyver_defconfig
+++ b/arch/arm64/configs/guyver_defconfig
@@ -79,6 +79,7 @@ CONFIG_LAZYPLUG=y
 CONFIG_INTELLI_HOTPLUG=y
 CONFIG_FORCE_FAST_CHARGE=y
 CONFIG_STATE_HELPER=y
+CONFIG_MSM_HOTPLUG=y
 
 #
 # IRQ subsystem
