fs: pstore: Add last kmsg support

--- a/arch/arm64/configs/guyver_defconfig
+++ b/arch/arm64/configs/guyver_defconfig
@@ -80,6 +80,7 @@ CONFIG_INTELLI_HOTPLUG=y
 CONFIG_FORCE_FAST_CHARGE=y
 CONFIG_STATE_HELPER=y
 CONFIG_MSM_HOTPLUG=y
+CONFIG_PSTORE_LAST_KMSG=y
 
 #
 # IRQ subsystem
