--- a/fs/pstore/Kconfig
+++ b/fs/pstore/Kconfig
@@ -59,6 +59,14 @@ config PSTORE_RAM
 
 	  For more information, see Documentation/ramoops.txt.
 
+config PSTORE_LAST_KMSG
+	bool "export /proc/last_kmsg"
+	default y
+	depends on PSTORE
+	help
+	  When the option is enabled, pstore will export a proc filesystem
+	  interface /proc/last_kmsg.
+
 config PSTORE_RAM_ANNOTATION_APPEND
 	bool "Allow appending messages to pstore ram annotation"
 	default n
