--- a/arch/arm64/configs/guyver_defconfig
+++ b/arch/arm64/configs/guyver_defconfig
@@ -50,8 +50,8 @@ CONFIG_HAVE_KERNEL_LZ4=y
 CONFIG_HAVE_KERNEL_LZMA=y
 CONFIG_HAVE_KERNEL_LZO=y
 CONFIG_HAVE_KERNEL_XZ=y
-# CONFIG_KERNEL_GZIP is not set
-CONFIG_KERNEL_LZ4=y
+# CONFIG_KERNEL_GZIP=y
+# CONFIG_KERNEL_LZ4 is not set
 # CONFIG_KERNEL_LZMA is not set
 # CONFIG_KERNEL_LZO is not set
 # CONFIG_KERNEL_XZ is not set
@@ -255,7 +255,7 @@ CONFIG_HAVE_GENERIC_DMA_COHERENT=y
 CONFIG_RT_MUTEXES=y
 CONFIG_BASE_SMALL=0
 # CONFIG_SYSTEM_TRUSTED_KEYRING is not set
-CONFIG_MODULES=y
+# CONFIG_MODULES is not set
 # CONFIG_MODULE_FORCE_LOAD is not set
 CONFIG_MODULE_UNLOAD=y
 CONFIG_MODULE_FORCE_UNLOAD=y
@@ -695,7 +695,7 @@ CONFIG_NETFILTER_XT_TARGET_CONNMARK=y
 CONFIG_NETFILTER_XT_TARGET_CONNSECMARK=y
 CONFIG_NETFILTER_XT_TARGET_CT=y
 # CONFIG_NETFILTER_XT_TARGET_DSCP is not set
-# CONFIG_NETFILTER_XT_TARGET_HL is not set
+CONFIG_NETFILTER_XT_TARGET_HL=y
 # CONFIG_NETFILTER_XT_TARGET_HMARK is not set
 CONFIG_NETFILTER_XT_TARGET_IDLETIMER=y
 CONFIG_NETFILTER_XT_TARGET_HARDIDLETIMER=y
@@ -792,7 +792,7 @@ CONFIG_NF_NAT_H323=y
 CONFIG_IP_NF_MANGLE=y
 # CONFIG_IP_NF_TARGET_CLUSTERIP is not set
 # CONFIG_IP_NF_TARGET_ECN is not set
-# CONFIG_IP_NF_TARGET_TTL is not set
+CONFIG_IP_NF_TARGET_TTL=y
 CONFIG_IP_NF_RAW=y
 CONFIG_IP_NF_SECURITY=y
 CONFIG_IP_NF_ARPTABLES=y
@@ -1736,11 +1736,11 @@ CONFIG_INPUT_UINPUT=y
 # CONFIG_BMP18X is not set
 # CONFIG_SENSORS_MMA8X5X is not set
 # CONFIG_SENSORS_AP3426 is not set
-# CONFIG_SENSORS_LTR553 is not set
+CONFIG_SENSORS_LTR553=y
 CONFIG_SENSORS_MMC3416X=y
 CONFIG_SENSORS_AKM09911=y
 CONFIG_SENSORS_AKM8963=y
-# CONFIG_SENSORS_STK3X1X is not set
+CONFIG_SENSORS_STK3X1X=y
 CONFIG_SENSORS_CAPELLA_CM36283=y
 CONFIG_SENSORS_BMA2X2=y
 # CONFIG_SENSORS_BMA2X2_ENABLE_INT1 is not set
@@ -3463,7 +3463,7 @@ CONFIG_NET_VENDOR_SILICOM=y
 # Qualcomm Atheros Prima WLAN module
 #
 # CONFIG_PRIMA_WLAN is not set
-CONFIG_PRONTO_WLAN=m
+CONFIG_PRONTO_WLAN=y
 # CONFIG_PRIMA_WLAN_BTAMP is not set
 CONFIG_PRIMA_WLAN_LFR=y
 CONFIG_PRIMA_WLAN_OKC=y
@@ -3680,7 +3680,8 @@ CONFIG_MSM_CPU_PWR_CTL=y
 CONFIG_QCOM_EARLY_RANDOM=y
 CONFIG_MSM_PACMAN=y
 CONFIG_MSM_TEST_PACMAN=y
-CONFIG_MSM_CORE_CTL_HELPER=y
+# CONFIG_MSM_CORE_CTL is not set
+# CONFIG_MSM_CORE_CTL_HELPER is not set
 CONFIG_MSM_PERFORMANCE=y
 # CONFIG_MSM_PERFORMANCE_HOTPLUG_ON is not set
 # CONFIG_QCOM_NPA_DUMP is not set
