--- a/arch/arm64/configs/guyver_defconfig
+++ b/arch/arm64/configs/guyver_defconfig
@@ -1732,7 +1732,8 @@ CONFIG_INPUT_MT_WRAPPER=y
 CONFIG_INPUT_MISC=y
 # CONFIG_INPUT_AD714X is not set
 # CONFIG_INPUT_BMA150 is not set
-CONFIG_INPUT_FPC1020=y
+CONFIG_INPUT_FINGERPRINT=y
+CONFIG_FINGERPRINT_FPC1020_KENZO=y
 CONFIG_INPUT_HBTP_INPUT=y
 # CONFIG_INPUT_MMA8450 is not set
 # CONFIG_INPUT_MPU3050 is not set
