--- a/arch/arm64/configs/guyver_defconfig
+++ b/arch/arm64/configs/guyver_defconfig
@@ -1727,7 +1727,7 @@ CONFIG_TOUCHSCREEN_GEN_VKEYS=y
 CONFIG_SECURE_TOUCH=y
 # CONFIG_TOUCHSCREEN_GT9XX is not set
 CONFIG_TOUCHSCREEN_BU21150=y
-CONFIG_INPUT_MT_WRAPPER=y
+# CONFIG_INPUT_MT_WRAPPER is not set
 # CONFIG_TOUCHSCREEN_IT7260_I2C is not set
 CONFIG_INPUT_MISC=y
 # CONFIG_INPUT_AD714X is not set
@@ -1824,8 +1824,6 @@ CONFIG_SERIAL_CORE=y
 CONFIG_SERIAL_CORE_CONSOLE=y
 # CONFIG_SERIAL_JSM is not set
 CONFIG_SERIAL_MSM_HS=y
-CONFIG_SERIAL_MSM_HSL=y
-CONFIG_SERIAL_MSM_HSL_CONSOLE=y
 # CONFIG_SERIAL_SCCNXP is not set
 # CONFIG_SERIAL_TIMBERDALE is not set
 # CONFIG_SERIAL_ALTERA_JTAGUART is not set
