--- a/arch/arm64/configs/darkness_defconfig
+++ b/arch/arm64/configs/darkness_defconfig
@@ -1758,7 +1758,6 @@ CONFIG_SENSORS_BMA2X2=y
 # CONFIG_SENSORS_BMA2X2_ENABLE_INT2 is not set
 # CONFIG_SENSORS_BMI058 is not set
 CONFIG_SENSORS_MC3430=y
-# CONFIG_HALL is not set
 CONFIG_SENSORS_ISL29044A=y
 # CONFIG_FINGERPRINT_FPC1020_HYDROGEN is not set
 CONFIG_FINGERPRINT_FPC1020_KENZO=y
@@ -3676,7 +3675,7 @@ CONFIG_MSM_CPU_PWR_CTL=y
 CONFIG_QCOM_EARLY_RANDOM=y
 CONFIG_MSM_PACMAN=y
 CONFIG_MSM_TEST_PACMAN=y
-# CONFIG_MSM_CORE_CTL_HELPER is not set
+CONFIG_MSM_CORE_CTL_HELPER=y
 CONFIG_MSM_PERFORMANCE=y
 CONFIG_MSM_PERFORMANCE_HOTPLUG_ON=y
 # CONFIG_QCOM_NPA_DUMP is not set
